python/testData/inspections/objectBaseIsNotShownInAutoImportQuickfix/main.py
<error descr="Unresolved reference 'MyOldStyleClass'">MyOldStyleCl<caret>ass</error>
